--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Hello VinayShivu Website</title>
+		<title>Hello VinayShivakumar Website</title>
 		<style>
 			html,body {
 				background: linear-gradient(#221B71, #130E46);
@@ -37,7 +37,7 @@
 	</head>
 	<body>
 		<div id="content">
-			<h1>Hello <span class="orange">Welcome to VinayShivu Website</span> &#127881;</h1>
+			<h1>Hello <span class="orange">Welcome to VinayShivakumar Website</span> &#127881;</h1>
 		</div>
 
 		<h1>how are you doing today</h1>
