--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	</head>
 	<body>
 		<div id="content">
-			<h1>Hello <span class="orange">Welcome to VinayShivakumar Website</span> &#127881;</h1>
+			<h1>Hello <span class="orange">Welcome to VinayShivakumar 1 Website</span> &#127881;</h1>
 		</div>
 
 		<h1>how are you doing today</h1>
